--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,10 @@
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.9.8</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math</artifactId>
+			<version>2.0</version>
+		</dependency>
 	</dependencies>
 </project>
